# translator-lower-third-vmix

./: .gitignore  Avvia-Traduttore-Live.cmd  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  TranslatorLowerThird.spec  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt
app/: __init__.py  i18n.py  local_runtime.py  main.py  pipeline.py  services.py
app/audio/: __init__.py  devices.py  input.py  levels.py  loopback.py
app/config/: __init__.py  manager.py  models.py  secrets.py
app/gui/: __init__.py  first_run_wizard.py  main_window.py  settings_dialog.py  subtitle_overlay.py  widgets.py
app/logging/: __init__.py  setup.py
app/outputs/: __init__.py  vmix.py
app/providers/: __init__.py  _stabilize.py  azure_speech.py  azure_translate.py  base.py  composed.py  deepl.py  fake.py  google_speech.py  google_translate.py  local_translate.py  (+3 more)
assets/: README.md
docs/: ARCHITECTURE.md  ROADMAP.md  TROUBLESHOOTING.md  USER_GUIDE.md
installer/: inno_setup.iss
scripts/: build_exe.ps1  build_installer.ps1  build_local_runtime.ps1  make_icon.py
tests/: test_audio_loopback.py  test_audio_mock.py  test_azure_translate_provider.py  test_cloud_speech_providers.py  test_composed_provider.py  test_config.py  test_deepl_provider.py  test_fake_provider.py  test_google_translate_provider.py  test_gui.py  test_i18n.py  test_local_providers.py  test_local_runtime.py  test_logging.py  test_openai_provider.py  test_partial_stabilizer.py  test_pipeline.py  test_provider_registry.py  test_subtitle_formatter.py  test_vmix_output.py
(+3 files in other folders)
