[project]
name = "translator-lower-third-vmix"
version = "0.2.0"
description = "Windows desktop app that translates live speech and sends subtitles to a vMix lower third via HTTP API"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Michele Dipace", email = "michele.dipace@kaffeine.net" }]
license = { text = "MIT" }
dependencies = [
    "PySide6>=6.6",
    "sounddevice>=0.4.6",
    "numpy>=1.26",
    "httpx>=0.27",
    "PyYAML>=6.0",
    "keyring>=24.3",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pyinstaller>=6.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# The i18n catalog is data: long translation strings must stay on one line.
"app/i18n.py" = ["E501"]
